Correction du chemin style.css dans fichier index.html

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>MOOC GitHub</title>
 </head>
 
@@ -12,6 +12,7 @@
 
     <div id="contenu">
     <p>Activité : Partager un repository sur GitHub</p>
+    <hr>
     </div>
 
 </body>
