Modif index.html rajout d'un saut de ligne et du lien vers enonce.pdf

--- a/html/index.html
+++ b/html/index.html
@@ -11,8 +11,11 @@
     <h1>Gérez votre code avec Git et GitHub</h1>
 
     <div id="contenu">
-    <p>Activité : Partager un repository sur GitHub</p>
-    <hr>
+    	<p>Activité : Partager un repository sur GitHub</p>
+    	<hr>
+    	<p><a href="../enonce.pdf">Enoncé de l'Activité</a></p>
+    	</br>
+    	<p>Merci pour votre correction<p>
     </div>
 
 </body>
